@@ -4,6 +4,10 @@ It does not matter how slowly you go as long as you do not stop.
 First they ignore you, then they laugh at you, then they fight you,
 then you win. –- Mahatma Gandhi
 
+Sun, Apr 5, 2009
+---------------------------------------------------------------------
+- More tweaks rescheduling and reassigning tasks.
+
 Sat, Apr 4, 2009
 ---------------------------------------------------------------------
 - Added :before_update hooks for task along with related model specs.
